--- a/base/templates/productos/actualizar.html
+++ b/base/templates/productos/actualizar.html
@@ -1,8 +1,7 @@
 {% extends 'index.html' %}
 {% block content %}
-	<form method="post">
-		{% csrf_token %}
+	<form action="" method="post">{% csrf_token %}
 		{{ form.as_p }}
-		<input type="submit" value="Guardar" />
+		<input type="submit" value="Update" />
 	</form>
 {% endblock content %}
