--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -5,7 +5,11 @@
 	<title> Forsales {% block titulo_pagina %} {% endblock titulo_pagina %}</title>
 </head>
 <body>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 	{% block content %}
 	{% endblock content %}
+
+	{% block scripts %}
+	{% endblock scripts %}
 </body>
 </html>
