--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -375,6 +375,17 @@
             <li class=""><a href="{% url 'inventario' %}"><i class="fa fa-circle-o"></i> Listar</a></li>
           </ul>
         </li>
+         <li treeview">
+          <a href="#">
+            <i class="fa fa-dashboard"></i> <span>Catalogo</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li class=""><a href="{% url 'inventario' %}"><i class="fa fa-circle-o"></i> Lista</a></li>
+          </ul>
+        </li>
         <li class="active treeview">
           <a href="#">
             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
