--- a/base/templates/clientes/listar.html
+++ b/base/templates/clientes/listar.html
@@ -33,5 +33,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-
+	<button class="btn btn-success"><a href="{% url 'crear_cliente' %}">Crear</a></button>
 {% endblock content %}
