--- a/base/templates/distribuidores/listar.html
+++ b/base/templates/distribuidores/listar.html
@@ -28,5 +28,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-
+					<button class="btn btn-success"><a href="{% url 'crear_distribuidor' %}">Crear</a></button>
 {% endblock content %}
