--- a/base/templates/productos/listar.html
+++ b/base/templates/productos/listar.html
@@ -31,5 +31,6 @@
 			{% endfor %}
 		</tbody>
 	</table>
+					<button class="btn btn-success"><a href="{% url 'crear_producto' %}">Crear</a></button>
 
 {% endblock content %}
