--- a/base/templates/proveedores/listar.html
+++ b/base/templates/proveedores/listar.html
@@ -29,6 +29,7 @@
 				</tr>
 			{% endfor %}
 		</tbody>
-	</table>
+	</table>	
+					<button class="btn btn-success"><a href="{% url 'crear_proveedor' %}">Crear</a></button>
 
 {% endblock content %}
