--- a/base/templates/AdminLTE/index.html
+++ b/base/templates/AdminLTE/index.html
@@ -44,7 +44,7 @@
 
   <header class="main-header">
     <!-- Logo -->
-    <a href="index2.html" class="logo">
+    <a href="forsales.png" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>F</b>V</span>
       <!-- logo for regular state and mobile devices -->
@@ -255,13 +255,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="D:\proyecto\forsales\ForsalesFinal\base\templates\AdminLTE\forsales.png" class="user-image" alt="User Image">
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <!--<img src="http://forsales.it/site/wp-content/uploads/2016/03/logo-forsales-black.png" class="img-circle" alt="User Image">-->
 
                 <p>
                   Alexander Pierce - Web Developer
@@ -383,7 +383,7 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li class=""><a href="{% url 'inventario' %}"><i class="fa fa-circle-o"></i> Lista</a></li>
+            <li class=""><a href="{% url 'catalogo' %}"><i class="fa fa-circle-o"></i> Lista</a></li>
           </ul>
         </li>
         <li class="active treeview">
@@ -564,8 +564,8 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Dashboard
-        <small>Control panel</small>
+        Bienvenido
+        <small>inicio</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -575,8 +575,16 @@
 
     <!-- Main content -->
     <section class="content">
+    <marquee scrollamount="10" width="100%" > 
+<img src="http://www.lacteoslaarboleda.com/img/logo.png" width="500" height="300" alt="8" />
+<!--<img src="iphone-png-15.png" width="500" height="300" alt="8"/>
+<img src="MAC2.png" width="500" height="300" alt="8"/>
+<img src="tablet.jpg" width="500" height="300" alt="8" />
+<img src="SERVICIOTECNICOAPPLE-MACBOOKPRO01.png" width="500" height="300" alt="8" />-->
+</marquee>
       {% block content %}
       {% endblock content %}
+      
     </section>
     <!-- /.content -->
   </div>
