--- a/base/templates/clientes/listar.html
+++ b/base/templates/clientes/listar.html
@@ -11,6 +11,7 @@
 				<th>Nombre Tienda</th>
 				<th>Regimen</th>
 				<th>direccion</th>
+				<th>telefono</th>
 				<th>Editar</th>
 				<th>Borrar</th>
 			</tr>
@@ -23,6 +24,8 @@
 					<td>{{ cliente.nombre_tienda }}</td>
 					<td>{{ cliente.regimen }}</td>
 					<td>{{ cliente.direccion }}</td>
+					<td>{{ cliente.telefono }}</td>
+					
 					<td><a href="{% url 'actualizar_cliente' cliente.pk %}">Editar</a></td>
 					<td><a href="{% url 'borrar_cliente' cliente.pk %}">Borrar</a></td>
 				</tr>
