--- a/base/templates/distribuidores/actualizar.html
+++ b/base/templates/distribuidores/actualizar.html
@@ -1,8 +1,15 @@
 {% extends 'AdminLTE/index.html' %}
+{% load bootstrap %}
 
 {% block content %}
-	<form action="" method="post">{% csrf_token %}
-		{{ form.as_p }}
-		<input type="submit" value="Update" />
-	</form>
+
+<form method="post" role="form">
+    <legend>Distribuidores</legend>
+    {% csrf_token %}
+    {{ form|bootstrap }}
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Editar</button>
+    </div>
+</form>
+
 {% endblock content %}
