--- a/base/templates/productos/listar.html
+++ b/base/templates/productos/listar.html
@@ -31,6 +31,6 @@
 			{% endfor %}
 		</tbody>
 	</table>
-					<button class="btn btn-success"><a href="{% url 'crear_producto' %}">Crear</a></button>
+					<button class="btn btn-success"><a href="{% url 'crear_producto' %}">Nuevo</a></button>
 
 {% endblock content %}
