--- a/inventario/templates/inventario/crear.html
+++ b/inventario/templates/inventario/crear.html
@@ -1,4 +1,5 @@
-{% extends 'index.html' %}
+{% extends 'AdminLTE/index.html' %}
+
 {% block content %}
 	<form method="post" id="form">
 		{% csrf_token %}
@@ -13,9 +14,9 @@
 	</form>
 
 
-{% endblock content %}
+<!--{% endblock content %}
 
-{% block scripts %}
+{% block scripts %}-->
 	<script type="text/javascript">
 		$("#form").submit(function(event){
 			var currentForm = $(this)
