--- a/inventario/templates/movimiento/crear.html
+++ b/inventario/templates/movimiento/crear.html
@@ -19,6 +19,8 @@
 
 {% block scripts %}
 	<script type="text/javascript">
+		$("#id_movimiento").closest("p").remove()
+
 		$("#form").submit(function(event){
 			var currentForm = $(this)
 			event.preventDefault()
