--- a/inventario/templates/inventario/crear.html
+++ b/inventario/templates/inventario/crear.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 	<form method="post" id="form">
+		<input type="hidden" id="inventario_pk">
+
 		{% csrf_token %}
 		{{ form.as_p }}
 		<input type="submit" value="Guardar" />
@@ -18,6 +20,16 @@
 
 {% block scripts %}-->
 	<script type="text/javascript">
+	$("#form_detalle :input").prop("disabled",true)
+
+	$("#form_detalle").find("#id_cantidad,#id_costo").change(function(){
+		var t = 0
+		t = parseFloat($("#form_detalle #id_cantidad").val()) * parseFloat($("#form_detalle #id_costo").val())
+		$("#form_detalle #id_valor_total").val(t)
+	})
+
+		$("#id_inventario").closest("p").remove()
+
 		$("#form").submit(function(event){
 			var currentForm = $(this)
 			event.preventDefault()
@@ -48,10 +60,18 @@
 						}
 						$(selector).closest(".form-group").find("ul.errorlist").remove()
 						$(selector).closest(".form-group").prepend(ul)
+						alert("Ocurrio un Error.")
 					}
 				},
 				success: function(response){
 					console.log(response)
+					response.object = JSON.parse(response.object)[0]
+
+					alert("Inventario Creado. \n Ingrese los productos")
+					$("#form :input").prop("disabled",true)
+					$("#form_detalle :input").prop("disabled",false)
+					$("#inventario_pk").val(response.object.pk)
+
 				}
 
 			});
@@ -66,6 +86,7 @@
 					formData.append('file-'+i, file);
 				})
 			})
+			formData.append("inventario",$("#inventario_pk").val())
 
 			$.ajax({
 				url: "/inventario/detalle/crear/",
@@ -89,7 +110,17 @@
 					}
 				},
 				success: function(response){
+					$("#id_producto").find("option[value=" + $("#id_producto").val() + "]").remove()
+					response.object = JSON.parse(response.object)[0]
 					console.log(response)
+
+
+					currentForm.trigger("reset")
+					alert("Producto Creado. \n Ingrese Nuevo Producto")
+					var vt = parseFloat($("#form #id_valor_total").val())
+					$("#id_valor_total").val( vt + response.object.fields.valor_total )
+					
+
 				}
 
 			});
