--- a/facturacion/templates/factura/listar.html
+++ b/facturacion/templates/factura/listar.html
@@ -29,5 +29,5 @@
 			{% endfor %}
 		</tbody>
 	</table>
-	<button class="btn btn-success"><a href="{% url 'factura' %}">Crear</a></button>
+	<button class="btn btn-success"><a href="{% url 'facturacion' %}">Crear</a></button>
 {% endblock content %}
