--- a/facturacion/templates/reportes/ventasTotal.html
+++ b/facturacion/templates/reportes/ventasTotal.html
@@ -2,18 +2,27 @@
 
 {% block content %}
 
-	<table>
+	<table class="table">
 		<thead>
 			<tr>
 				<th>id</th>
+				<th>fecha_creacion</th>
+				<th>valor_total</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for factura in facturas %}
 				<tr>
 					<td>{{ factura.pk }}</td>
+					<td>{{ factura.fecha_creacion }}</td>
+					<td>{{ factura.valor_total }}</td>
 				</tr>
 			{% endfor %}
+			<tr>
+				<td>Total</td>
+				<td></td>
+				<td>{{ vttotal }}</td>
+			</tr>
 		</tbody>
 	</table>
 
