--- a/base/templates/clientes/create.html
+++ b/base/templates/clientes/create.html
@@ -12,29 +12,31 @@
     </div>
 </form>
 
-<script type="text/javascript">
-    $(document).readey(function(){
+{% endblock content %}
+% block scripts %}
+	<script type="text/javascript">
+	    $(document).readey(function(){
 
-		function localizacion(posicion){
+			function localizacion(posicion){
 
-			var latitude = posicion.coords.latitude;
-			var longitude = posicion.coords.longitude;
-			//alert("tu latitude es: "+latitude+ "tu longitude es: " +longitude );
-			//output.innerHTML = "<p>latitude:  "+ latitude+ "<br>longitude:  "+ longitude+"</p>";
+				var latitude = posicion.coords.latitude;
+				var longitude = posicion.coords.longitude;
+				//alert("tu latitude es: "+latitude+ "tu longitude es: " +longitude );
+				//output.innerHTML = "<p>latitude:  "+ latitude+ "<br>longitude:  "+ longitude+"</p>";
 
-			$("#id_pos_x").val(latitude)
-			$("#id_pos_y").val(longitude)
-			
+				$("#id_pos_x").val(latitude)
+				$("#id_pos_y").val(longitude)
+				
 
-		}
+			}
 
-		function error(){
-			//output.innerHTML = "<p> no se pudo obtener tu ubicacion</p>";
-		}
+			function error(){
+				//output.innerHTML = "<p> no se pudo obtener tu ubicacion</p>";
+			}
 
-		navigator.geolocation.getCurrentPosition(localizacion, error);
-    })
+			navigator.geolocation.getCurrentPosition(localizacion, error);
+	    })
 
 
-</script>
+	</script>
 {% endblock content %}
