--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -11,5 +11,14 @@
 
 	{% block scripts %}
 	{% endblock scripts %}
+	<script type="text/javascript">
+		/*
+			Script para verificar ventas por cliente
+			$.post("/verificacion_ventas_cliente",function(response){
+				var data =  JSON.parse(response)
+				console.log(data)
+			})
+		*/
+	</script>
 </body>
 </html>
